# cpp-package-manager

./: README.md
build-scripts/cmake/: CMakeLists.txt
prefix/share/iscoolentertainment/paco/: bash_completion  batch-build-template.sh  common.sh  s3-credentials.conf  s3.sh
tests/: flow.sh  install-overwrite.sh  paco-archive.sh  paco-info.sh  paco-list.sh  paco-publish.sh  paco-purge.sh  reinstall.sh  requirements-many.sh  requirements-publish.sh  requirements.sh  uninstall-spaces.sh
